--- a/index.html
+++ b/index.html
@@ -14,18 +14,15 @@
         <nav>
             <h1><span>ORVEX</span>IA</h1>
             <ul>
-                <li>Home</li>
                 <li>Service</li>
                 <li>Contact</li>
                 <li>About</li>
-                <li>Blog</li>
-                <li>Portfolio</li>
             </ul>
         </nav>
         <section>
             <div class="textBox">
-                <h1><span>Animated</span>Background</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                <h1><span>OR</span>VEX</h1>
+                <p>Filtra clientes y cerra ventas mientras dormis, en Orvex tenemos la solucion.</p>
                 <button class="homeBtn" style="--i:#fff;">Join Us</button>
                 <button class="homeBtn" style="--i:#00bfff;">EXPLORE</button>
             </div>
